# log73

./: .gitignore  AGENTS.md  Cargo.toml  Makefile  README.md  dist-workspace.toml  package-lock.json  package.json  plan.md  pnpm-lock.yaml  rsbuild.config.mjs
.github/: dist-build-setup.yml
.github/workflows/: backend-lint.yml  backend-test.yml  frontend-build.yml  frontend-lint.yml  frontend-test.yml  integration.yml  release.yml
backend/: Cargo.toml
backend/src/: adif.rs  auth.rs  bandmap.rs  bands.rs  cabrillo.rs  cat_keyer.rs  contest_rules.rs  cw.rs  db.rs  dxcc.rs  dxcluster.rs  frequency.rs  log_cache.rs  main.rs  message_mode.rs  messages.rs  modes.rs  qso_time.rs  radio.rs  radio_manager.rs  scoring.rs  scqso_in_state.rs  static_assets.rs  stats.rs  supercheckpartial.rs  validation.rs  voice_keyer.rs  voice_messages.rs
backend/src/db/: bands.rs  config.rs  contact.rs  contacts.rs  logs.rs  models.rs  radios.rs  schema.rs  serials.rs  worker.rs
backend/src/radio_manager/: cat_runtime.rs  commands.rs  cw_task.rs  lifecycle.rs  rit.rs  voice.rs
backend/src/radio_manager/keyers/: cat.rs  mod.rs  serial.rs  winkeyer.rs
backend/wix/: main.wxs
contest-rules/: arrl-field-day.yaml  sc-qso-party.yaml
data/: MASTER.SCP  cty.csv
data/contest-rules/: arrl-field-day.yaml  cqww.yaml  cw-weeklies.yaml  sc-qso-party.yaml
docs/: help.css  index.md  keyboard-shortcuts.md  manual-regeneration-prompt.md  manual.md  replace-links.lua
docs/help/: index.html  keyboard-shortcuts.html  manual.html
launcher/: Cargo.toml
launcher/src/: main.rs
launcher/wix/: main.wxs
paths/: Cargo.toml
paths/src/: lib.rs
scripts/: README.md  build_native_linux_packages.sh  gen_sc_qso_party_in_state.py
src/: App.css  App.jsx  CreateLogScreen.jsx  CreateRadioScreen.jsx  LogWindow.jsx  LoggerScreen.jsx  MainWindow.jsx  OpenLogScreen.jsx  api.js  index.jsx  theme-classic-terminal.css
src/app/: App.jsx
src/components/: ConfiguredFields.jsx
src/domain/: adifImport.js  adifImport.test.js  bandMap.js  bandMap.test.js  completions.js  completions.test.js  configUpdate.js  configUpdate.test.js  contactFields.js  contactFields.test.js  dateTime.js  dateTime.test.js  dupes.js  dupes.test.js  dxcc.js  dxcc.test.js  exportSettings.js  exportSettings.test.js  loggerImageSettings.js  loggerImageSettings.test.js  messageModes.js  messageModes.test.js  messages.js  messages.test.js  modes.js  modes.test.js  soundDevices.js  soundDevices.test.js  validation.js  validation.test.js
src/lib/: api.js  api.test.js  errorReporting.js  notifications.jsx  notificationsContext.js
src/logger/: BandMapWindow.jsx  LogWindow.jsx  MainWindow.jsx  mainWindowHelpers.js  mainWindowHelpers.test.js  mainWindowHooks.test.js  supercheckpartialCache.js  supercheckpartialCache.test.js
src/logger/components/: CommandButtons.jsx  EntryFields.jsx  FunctionKeys.jsx  RadioControls.jsx  StatusBar.jsx
src/logger/hooks/: messageSendingState.js  useBandControls.js  useCompletions.js  useCwTextDialog.js  useEntryFields.js  useEsm.js  useKeyboardShortcuts.js  useMessageSending.js
src/screens/: ConfigScreen.jsx  CreateLogScreen.jsx  CreateRadioScreen.jsx  ExportLogScreen.jsx  ImportAdifScreen.jsx  LoggerScreen.jsx  OpenLogScreen.jsx  loggerScreenHelpers.js  loggerScreenHelpers.test.js  loggerScreenHooks.test.js
src/screens/loggerScreen/: backendSocketController.js  contactsOutboxState.js  serialAllocatorState.js  useBackendSocket.js  useBandMap.js  useContactsOutbox.js  useLoggerContext.js  useLoggerImage.js  useOperationalErrorReporter.js  useSerialAllocator.js
src/styles/: App.css  theme-classic-terminal.css  theme-clean-light-desktop.css  theme-default.css  theme-high-contrast.css  theme-modern-dark-radio.css  theme-n1mm-contest.css
src/themes/: themes.js
