[package]
name = "log73-backend"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/elitegreg/log73"
authors = ["Greg Mitchell <greg@ng4m.dev>"]

[package.metadata.wix]
upgrade-guid = "58437DFA-E6E3-401F-955C-BA071684EC5E"
path-guid = "26A2BC13-7738-4795-8E3A-E59CF393721E"
license = false
eula = false

[dependencies]
axum = { version = "0.8", features = ["ws"] }
argon2 = "0.5"
backon = "1.6.0"
base64 = "0.22.1"
clap = { version = "4.6.1", features = ["derive"] }
cw-serial-keyer = { git = "https://github.com/elitegreg/cw-serial-keyer-rs.git" }
dxcllistener = { git = "https://github.com/elitegreg/dxcllistener.git" }
dxclparser = "1.0.1"
futures-util = "0.3"
log73-paths = { path = "../paths" }
mime_guess = "2.0.5"
regex = "1"
rand_core = { version = "0.6", features = ["getrandom"] }
radif = "0.4.0"
radio-cat-rs = { git = "https://github.com/elitegreg/radio-cat-rs.git", branch = "main" }
rodio = { version = "0.22.2", default-features = false, features = ["playback", "wav"] }
rusqlite = { version = "0.32", features = ["bundled"] }
rust-embed = "8.11.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tower-http = { version = "0.6", features = ["trace"] }
tracing = "0.1.44"
tracing-appender = "0.2.5"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
winkeyer = { package = "winkeyer-rs", git = "https://github.com/elitegreg/winkeyer-rs.git" }
