[package]
name = "launcher"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "log73-launcher"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", features = ["tokio", "image"] }
log73-paths = { path = "../paths" }
open = "5"
serde = { version = "1", features = ["derive"] }
shared_child = "1"
tokio = { version = "1", features = ["rt", "time"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
