[package]
name = "launcher"
version = "0.2.0"
edition = "2024"
repository = "https://github.com/elitegreg/log73"
authors = ["Greg Mitchell <greg@ng4m.dev>"]

[package.metadata.wix]
upgrade-guid = "DD4A9B3C-6467-46CD-B571-A7C4E1423FE0"
path-guid = "DDA1F85F-F333-489A-ABC9-F69F51E70873"
license = false
eula = false

[[bin]]
name = "log73-launcher"
path = "src/main.rs"

[dependencies]
iced = { version = "0.13", default-features = false, features = ["tiny-skia", "tokio", "image", "fira-sans"] }
log73-paths = { path = "../paths" }
open = "5"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
serde = { version = "1", features = ["derive"] }
shared_child = "1"
tokio = { version = "1", features = ["rt", "time"] }
toml = "0.8"

[target.'cfg(unix)'.dependencies]
nix = { version = "0.29", features = ["signal", "process"] }
